--- a/javascript basico2/style.css
+++ b/javascript basico2/style.css
@@ -10,7 +10,7 @@ th, td {
    text-align: center;
 }
 th {
-   background-color: black;
+   background-color: rgb(49, 31, 31);
    color: white;
 }
 td {
